Haiku/bridge/libmojobe/mojobe.h

/*!	`BRect` as C passes it: laid out the same, but without the
	user-declared copy constructor that makes C++ pass a `BRect` by
	hidden reference. */
struct mojobe_BRect {
	float	left;
	float	top;
	float	right;
	float	bottom;
};
/*!	`BPoint` as C passes it: laid out the same, but without the
	user-declared copy constructor that makes C++ pass a `BPoint` by
	hidden reference. */
struct mojobe_BPoint {
	float	x;
	float	y;
};
/*!	`rgb_color` as C passes it: laid out the same, a plain C struct
	(its member functions make `rgb_color` a C++ type to C). */
struct mojobe_rgb_color {
	uint8	red;
	uint8	green;
	uint8	blue;
	uint8	alpha;
};
// void BView::FrameMoved(BPoint newPosition)
void mojobe_BView_FrameMoved(BView* self, mojobe_BPoint a_newPosition);
// void BView::FrameResized(float newWidth, float newHeight)
void mojobe_BView_FrameResized(BView* self,
	float a_newWidth,
	float a_newHeight);
// void BView::BeginRectTracking(BRect startRect, uint32 style)
void mojobe_BView_BeginRectTracking(BView* self,
	mojobe_BRect a_startRect,
	uint32 a_style);
// void BView::EndRectTracking()
void mojobe_BView_EndRectTracking(BView* self);
// void BView::GetMouse(BPoint* location, uint32* buttons, bool checkMessageQueue)
void mojobe_BView_GetMouse(BView* self,
	mojobe_BPoint* a_location,
	uint32 * a_buttons,
	bool a_checkMessageQueue);
// void BView::DragMessage(BMessage* message, BRect dragRect, BHandler* replyTo)
void mojobe_BView_DragMessage(BView* self,
	BMessage* a_message,
	mojobe_BRect a_dragRect);
// BView* BView::FindView(const char* name) const
BView* mojobe_BView_FindView(BView* self, const char* a_name);
// BView* BView::Parent() const
BView* mojobe_BView_Parent(BView* self);
// BRect BView::Bounds() const
mojobe_BRect mojobe_BView_Bounds(BView* self);
// BRect BView::Frame() const
mojobe_BRect mojobe_BView_Frame(BView* self);
// BPoint BView::ConvertToScreen(BPoint point) const
mojobe_BPoint mojobe_BView_ConvertToScreen__BPoint(BView* self,
	mojobe_BPoint a_point);
// BRect BView::ConvertToScreen(BRect rect) const
mojobe_BRect mojobe_BView_ConvertToScreen__BRect(BView* self,
	mojobe_BRect a_rect);
// BPoint BView::ConvertFromScreen(BPoint point) const
mojobe_BPoint mojobe_BView_ConvertFromScreen__BPoint(BView* self,
	mojobe_BPoint a_point);
// BRect BView::ConvertFromScreen(BRect rect) const
mojobe_BRect mojobe_BView_ConvertFromScreen__BRect(BView* self,
	mojobe_BRect a_rect);
// BPoint BView::ConvertToParent(BPoint point) const
mojobe_BPoint mojobe_BView_ConvertToParent__BPoint(BView* self,
	mojobe_BPoint a_point);
// BRect BView::ConvertToParent(BRect rect) const
mojobe_BRect mojobe_BView_ConvertToParent__BRect(BView* self,
	mojobe_BRect a_rect);
// BPoint BView::ConvertFromParent(BPoint point) const
mojobe_BPoint mojobe_BView_ConvertFromParent__BPoint(BView* self,
	mojobe_BPoint a_point);
// BRect BView::ConvertFromParent(BRect rect) const
mojobe_BRect mojobe_BView_ConvertFromParent__BRect(BView* self,
	mojobe_BRect a_rect);
// BPoint BView::LeftTop() const
mojobe_BPoint mojobe_BView_LeftTop(BView* self);
// void BView::ClipToRect(BRect rect)
void mojobe_BView_ClipToRect(BView* self, mojobe_BRect a_rect);
// void BView::ClipToInverseRect(BRect rect)
void mojobe_BView_ClipToInverseRect(BView* self, mojobe_BRect a_rect);
// void BView::SetDrawingMode(drawing_mode mode)
void mojobe_BView_SetDrawingMode(BView* self, drawing_mode a_mode);
// drawing_mode BView::DrawingMode() const
drawing_mode mojobe_BView_DrawingMode(BView* self);
// void BView::SetBlendingMode(source_alpha srcAlpha, alpha_function alphaFunc)
void mojobe_BView_SetBlendingMode(BView* self,
	source_alpha a_srcAlpha,
	alpha_function a_alphaFunc);
// void BView::GetBlendingMode(source_alpha* srcAlpha, alpha_function* alphaFunc) const
void mojobe_BView_GetBlendingMode(BView* self,
	source_alpha * a_srcAlpha,
	alpha_function * a_alphaFunc);
// void BView::SetPenSize(float size)
void mojobe_BView_SetPenSize(BView* self, float a_size);
// float BView::PenSize() const
float mojobe_BView_PenSize(BView* self);
// bool BView::HasDefaultColors() const
bool mojobe_BView_HasDefaultColors(BView* self);
// bool BView::HasSystemColors() const
bool mojobe_BView_HasSystemColors(BView* self);
// void BView::AdoptParentColors()
void mojobe_BView_AdoptParentColors(BView* self);
// void BView::AdoptSystemColors()
void mojobe_BView_AdoptSystemColors(BView* self);
// void BView::AdoptViewColors(BView* view)
void mojobe_BView_AdoptViewColors(BView* self, BView* a_view);
// void BView::SetViewColor(rgb_color color)
void mojobe_BView_SetViewColor__rgb_color(BView* self,
	mojobe_rgb_color a_color);
// void BView::SetViewColor(uchar red, uchar green, uchar blue, uchar alpha)
void mojobe_BView_SetViewColor__uchar_uchar_uchar_uchar(BView* self,
	uchar a_red,
	uchar a_green,
	uchar a_blue,
	uchar a_alpha);
// rgb_color BView::ViewColor() const
mojobe_rgb_color mojobe_BView_ViewColor(BView* self);
// void BView::SetViewUIColor(color_which which, float tint)
void mojobe_BView_SetViewUIColor(BView* self,
	color_which a_which,
	float a_tint);
// color_which BView::ViewUIColor(float* tint) const
color_which mojobe_BView_ViewUIColor(BView* self, float * a_tint);
// void BView::ClearViewBitmap()
void mojobe_BView_ClearViewBitmap(BView* self);
// void BView::ClearViewOverlay()
void mojobe_BView_ClearViewOverlay(BView* self);