Haiku/bridge/haiku/_api.mojo


    def FrameMoved(self, newPosition: BPoint):
        """`void BView::FrameMoved(BPoint newPosition)`."""
        external_call["mojobe_BView_FrameMoved", NoneType](
            _nonnull(self._as_BView(), "BView::FrameMoved"),
            newPosition,
        )

    def FrameResized(self, newWidth: Float32, newHeight: Float32):
        """`void BView::FrameResized(float newWidth, float newHeight)`."""
        external_call["mojobe_BView_FrameResized", NoneType](
            _nonnull(self._as_BView(), "BView::FrameResized"),
            newWidth,
            newHeight,
        )

    def BeginRectTracking(
        self,
        startRect: BRect,
        style: UInt32 = UInt32(B_TRACK_WHOLE_RECT.value),
    ):
        """`void BView::BeginRectTracking(BRect startRect, uint32 style)`."""
        external_call["mojobe_BView_BeginRectTracking", NoneType](
            _nonnull(self._as_BView(), "BView::BeginRectTracking"),
            startRect,
            style,
        )

    def EndRectTracking(self):
        """`void BView::EndRectTracking()`."""
        external_call["mojobe_BView_EndRectTracking", NoneType](
            _nonnull(self._as_BView(), "BView::EndRectTracking"),
        )

    def GetMouse(self, checkMessageQueue: Bool = True) -> Tuple[BPoint, UInt32]:
        """`void BView::GetMouse(BPoint* location, uint32* buttons, bool checkMessageQueue)`."""
        var location = BPoint(Float32(0), Float32(0))
        var buttons = UInt32(0)
        external_call["mojobe_BView_GetMouse", NoneType](
            _nonnull(self._as_BView(), "BView::GetMouse"),
            Pointer(to=location),
            Pointer(to=buttons),
            checkMessageQueue,
        )
        return (location, buttons)

    def DragMessage(self, message: Some[_AsBMessage], dragRect: BRect):
        """`void BView::DragMessage(BMessage* message, BRect dragRect, BHandler* replyTo)`."""
        external_call["mojobe_BView_DragMessage", NoneType](
            _nonnull(self._as_BView(), "BView::DragMessage"),
            _addr(message._as_BMessage()),
            dragRect,
        )

    def FindView(self, var name: String) -> BViewRef:
        """`BView* BView::FindView(const char* name) const`."""
        var _result = external_call["mojobe_BView_FindView", Int](
            _nonnull(self._as_BView(), "BView::FindView"),
            name.as_c_string_span(),
        )
        _ = name^
        return BViewRef(_ptr_from(_result))

    def Parent(self) -> BViewRef:
        """`BView* BView::Parent() const`."""
        var _result = external_call["mojobe_BView_Parent", Int](
            _nonnull(self._as_BView(), "BView::Parent"),
        )
        return BViewRef(_ptr_from(_result))

    def Bounds(self) -> BRect:
        """`BRect BView::Bounds() const`."""
        var _result = external_call["mojobe_BView_Bounds", BRect](
            _nonnull(self._as_BView(), "BView::Bounds"),
        )
        return _result

    def Frame(self) -> BRect:
        """`BRect BView::Frame() const`."""
        var _result = external_call["mojobe_BView_Frame", BRect](
            _nonnull(self._as_BView(), "BView::Frame"),
        )
        return _result

    def ConvertToScreen(self, point: BPoint) -> BPoint:
        """`BPoint BView::ConvertToScreen(BPoint point) const`."""
        var _result = external_call["mojobe_BView_ConvertToScreen__BPoint", BPoint](
            _nonnull(self._as_BView(), "BView::ConvertToScreen"),
            point,
        )
        return _result

    def ConvertToScreen(self, rect: BRect) -> BRect:
        """`BRect BView::ConvertToScreen(BRect rect) const`."""
        var _result = external_call["mojobe_BView_ConvertToScreen__BRect", BRect](
            _nonnull(self._as_BView(), "BView::ConvertToScreen"),
            rect,
        )
        return _result

    def ConvertFromScreen(self, point: BPoint) -> BPoint:
        """`BPoint BView::ConvertFromScreen(BPoint point) const`."""
        var _result = external_call["mojobe_BView_ConvertFromScreen__BPoint", BPoint](
            _nonnull(self._as_BView(), "BView::ConvertFromScreen"),
            point,
        )
        return _result

    def ConvertFromScreen(self, rect: BRect) -> BRect:
        """`BRect BView::ConvertFromScreen(BRect rect) const`."""
        var _result = external_call["mojobe_BView_ConvertFromScreen__BRect", BRect](
            _nonnull(self._as_BView(), "BView::ConvertFromScreen"),
            rect,
        )
        return _result

    def ConvertToParent(self, point: BPoint) -> BPoint:
        """`BPoint BView::ConvertToParent(BPoint point) const`."""
        var _result = external_call["mojobe_BView_ConvertToParent__BPoint", BPoint](
            _nonnull(self._as_BView(), "BView::ConvertToParent"),
            point,
        )
        return _result

    def ConvertToParent(self, rect: BRect) -> BRect:
        """`BRect BView::ConvertToParent(BRect rect) const`."""
        var _result = external_call["mojobe_BView_ConvertToParent__BRect", BRect](
            _nonnull(self._as_BView(), "BView::ConvertToParent"),
            rect,
        )
        return _result

    def ConvertFromParent(self, point: BPoint) -> BPoint:
        """`BPoint BView::ConvertFromParent(BPoint point) const`."""
        var _result = external_call["mojobe_BView_ConvertFromParent__BPoint", BPoint](
            _nonnull(self._as_BView(), "BView::ConvertFromParent"),
            point,
        )
        return _result

    def ConvertFromParent(self, rect: BRect) -> BRect:
        """`BRect BView::ConvertFromParent(BRect rect) const`."""
        var _result = external_call["mojobe_BView_ConvertFromParent__BRect", BRect](
            _nonnull(self._as_BView(), "BView::ConvertFromParent"),
            rect,
        )
        return _result

    def LeftTop(self) -> BPoint:
        """`BPoint BView::LeftTop() const`."""
        var _result = external_call["mojobe_BView_LeftTop", BPoint](
            _nonnull(self._as_BView(), "BView::LeftTop"),
        )
        return _result

    def ClipToRect(self, rect: BRect):
        """`void BView::ClipToRect(BRect rect)`."""
        external_call["mojobe_BView_ClipToRect", NoneType](
            _nonnull(self._as_BView(), "BView::ClipToRect"),
            rect,
        )

    def ClipToInverseRect(self, rect: BRect):
        """`void BView::ClipToInverseRect(BRect rect)`."""
        external_call["mojobe_BView_ClipToInverseRect", NoneType](
            _nonnull(self._as_BView(), "BView::ClipToInverseRect"),
            rect,
        )

    def SetDrawingMode(self, mode: drawing_mode):
        """`void BView::SetDrawingMode(drawing_mode mode)`."""
        external_call["mojobe_BView_SetDrawingMode", NoneType](
            _nonnull(self._as_BView(), "BView::SetDrawingMode"),
            mode,
        )

    def DrawingMode(self) -> drawing_mode:
        """`drawing_mode BView::DrawingMode() const`."""
        var _result = external_call["mojobe_BView_DrawingMode", drawing_mode](
            _nonnull(self._as_BView(), "BView::DrawingMode"),
        )
        return _result

    def SetBlendingMode(
        self,
        srcAlpha: source_alpha,
        alphaFunc: alpha_function,
    ):
        """`void BView::SetBlendingMode(source_alpha srcAlpha, alpha_function alphaFunc)`."""
        external_call["mojobe_BView_SetBlendingMode", NoneType](
            _nonnull(self._as_BView(), "BView::SetBlendingMode"),
            srcAlpha,
            alphaFunc,
        )

    def GetBlendingMode(self) -> Tuple[source_alpha, alpha_function]:
        """`void BView::GetBlendingMode(source_alpha* srcAlpha, alpha_function* alphaFunc) const`."""
        var srcAlpha = source_alpha(0)
        var alphaFunc = alpha_function(0)
        external_call["mojobe_BView_GetBlendingMode", NoneType](
            _nonnull(self._as_BView(), "BView::GetBlendingMode"),
            Pointer(to=srcAlpha),
            Pointer(to=alphaFunc),
        )
        return (srcAlpha, alphaFunc)

    def SetPenSize(self, size: Float32):
        """`void BView::SetPenSize(float size)`."""
        external_call["mojobe_BView_SetPenSize", NoneType](
            _nonnull(self._as_BView(), "BView::SetPenSize"),
            size,
        )

    def PenSize(self) -> Float32:
        """`float BView::PenSize() const`."""
        var _result = external_call["mojobe_BView_PenSize", Float32](
            _nonnull(self._as_BView(), "BView::PenSize"),
        )
        return _result

    def HasDefaultColors(self) -> Bool:
        """`bool BView::HasDefaultColors() const`."""
        var _result = external_call["mojobe_BView_HasDefaultColors", Bool](
            _nonnull(self._as_BView(), "BView::HasDefaultColors"),
        )
        return _result

    def HasSystemColors(self) -> Bool:
        """`bool BView::HasSystemColors() const`."""
        var _result = external_call["mojobe_BView_HasSystemColors", Bool](
            _nonnull(self._as_BView(), "BView::HasSystemColors"),
        )
        return _result

    def AdoptParentColors(self):
        """`void BView::AdoptParentColors()`."""
        external_call["mojobe_BView_AdoptParentColors", NoneType](
            _nonnull(self._as_BView(), "BView::AdoptParentColors"),
        )

    def AdoptSystemColors(self):
        """`void BView::AdoptSystemColors()`."""
        external_call["mojobe_BView_AdoptSystemColors", NoneType](
            _nonnull(self._as_BView(), "BView::AdoptSystemColors"),
        )

    def AdoptViewColors(self, view: Some[_AsBView]):
        """`void BView::AdoptViewColors(BView* view)`."""
        external_call["mojobe_BView_AdoptViewColors", NoneType](
            _nonnull(self._as_BView(), "BView::AdoptViewColors"),
            _addr(view._as_BView()),
        )

    def SetViewColor(self, color: rgb_color):
        """`void BView::SetViewColor(rgb_color color)`."""
        external_call["mojobe_BView_SetViewColor__rgb_color", NoneType](
            _nonnull(self._as_BView(), "BView::SetViewColor"),
            color,
        )

    def SetViewColor(
        self,
        red: UInt8,
        green: UInt8,
        blue: UInt8,
        alpha: UInt8 = 255,
    ):
        """`void BView::SetViewColor(uchar red, uchar green, uchar blue, uchar alpha)`."""
        external_call["mojobe_BView_SetViewColor__uchar_uchar_uchar_uchar", NoneType](
            _nonnull(self._as_BView(), "BView::SetViewColor"),
            red,
            green,
            blue,
            alpha,
        )

    def ViewColor(self) -> rgb_color:
        """`rgb_color BView::ViewColor() const`."""
        var _result = external_call["mojobe_BView_ViewColor", rgb_color](
            _nonnull(self._as_BView(), "BView::ViewColor"),
        )
        return _result

    def SetViewUIColor(self, which: color_which, tint: Float32 = B_NO_TINT):
        """`void BView::SetViewUIColor(color_which which, float tint)`."""
        external_call["mojobe_BView_SetViewUIColor", NoneType](
            _nonnull(self._as_BView(), "BView::SetViewUIColor"),
            which,
            tint,
        )

    def ViewUIColor(self) -> Tuple[color_which, Float32]:
        """`color_which BView::ViewUIColor(float* tint) const`."""
        var tint = Float32(0)
        var _result = external_call["mojobe_BView_ViewUIColor", color_which](
            _nonnull(self._as_BView(), "BView::ViewUIColor"),
            Pointer(to=tint),
        )
        return (_result, tint)

    def ClearViewBitmap(self):
        """`void BView::ClearViewBitmap()`."""
        external_call["mojobe_BView_ClearViewBitmap", NoneType](
            _nonnull(self._as_BView(), "BView::ClearViewBitmap"),
        )

    def ClearViewOverlay(self):
        """`void BView::ClearViewOverlay()`."""
        external_call["mojobe_BView_ClearViewOverlay", NoneType](
            _nonnull(self._as_BView(), "BView::ClearViewOverlay"),
        )
